# automation-project2

./: pyproject.toml
crypto-pay/: .gitignore  Makefile  README.md  conftest.py  main.py  pyproject.toml  pytest.ini
crypto-pay/common/: address_info.py  runner.py  single_items.py
crypto-pay/common/api/: __init__.py  payment.py  payment_ops.py  payout.py  registration.py  subscriptions.py  subscriptions_ops.py  terms.py
crypto-pay/common/fixture/: __init__.py
crypto-pay/common/utils/: btc_tools.py  gmail_helper.py  main_app_tools.py  on_chain_payment_tools.py  tools.py
crypto-pay/configs/: hosts.yaml  logging.yaml  qase_planning.yaml
crypto-pay/libs/: .flake8  .gitignore  README.md
crypto-pay/libs/cdc-qa-apis/: README.md  pyproject.toml
crypto-pay/libs/cdc-qa-apis/docs/: defining_api.md
crypto-pay/libs/cdc-qa-apis/src/cdc/qa/apis/crypto_nft/: __init__.py
crypto-pay/libs/cdc-qa-apis/src/cdc/qa/apis/crypto_nft_admin/: __init__.py
crypto-pay/libs/cdc-qa-apis/src/cdc/qa/apis/crypto_pay/: README.md  __init__.py
crypto-pay/libs/cdc-qa-apis/src/cdc/qa/apis/crypto_reward/: __init__.py
crypto-pay/libs/cdc-qa-apis/src/cdc/qa/apis/derivatives_admin_portal/: README.md  __init__.py  rest_base.py
crypto-pay/libs/cdc-qa-apis/src/cdc/qa/apis/exchange/: README.md  __init__.py  models.py
crypto-pay/libs/cdc-qa-apis/src/cdc/qa/apis/exchange_derivatives/: README.md  __init__.py  models.py
crypto-pay/libs/cdc-qa-apis/src/cdc/qa/apis/exchange_fe/: README.md  __init__.py  fe_base.py  fe_models.py
crypto-pay/libs/cdc-qa-apis/src/cdc/qa/apis/exchange_oex/: README.md  __init__.py  models.py
crypto-pay/libs/cdc-qa-apis/src/cdc/qa/apis/exchange_otc_sales_portal/: __init__.py  fe_sp_base.py  fe_sp_models.py
crypto-pay/libs/cdc-qa-apis/src/cdc/qa/apis/firebase_remote_config/: __init__.py
crypto-pay/libs/cdc-qa-apis/src/cdc/qa/apis/jumio/: README.md  __init__.py
crypto-pay/libs/cdc-qa-apis/src/cdc/qa/apis/plaid/: README.md  __init__.py
crypto-pay/libs/cdc-qa-apis/src/cdc/qa/apis/qa_tools/: README.md  __init__.py  base_models.py
crypto-pay/libs/cdc-qa-apis/src/cdc/qa/apis/rails/: README.md  (+1 more)
crypto-pay/libs/cdc-qa-apis/tests/crypto_nft/services/: test_assets.py  test_auth.py  test_common.py  test_drops.py  test_marketplace.py  test_profile.py
crypto-pay/libs/cdc-qa-apis/tests/crypto_nft/services/mock/: assets.py  auth.py  common.py  drops.py  marketplace.py  profile.py
crypto-pay/libs/cdc-qa-apis/tests/derivatives_admin_portal/: mocks.py  test_refdata_service.py  test_valuation.py
crypto-pay/libs/cdc-qa-apis/tests/exchange/models/: test_models.py
crypto-pay/libs/cdc-qa-apis/tests/exchange/models/ws/: test_account.py  test_margin.py  test_market_instrument.py  test_order.py  test_trade.py
crypto-pay/libs/cdc-qa-apis/tests/exchange/services/: test_basic.py
crypto-pay/libs/cdc-qa-apis/tests/exchange/services/rest/: test_account.py  test_hierarchy.py  test_private_margin.py  test_public_margin.py  test_public_ticker.py  test_public_trades.py  test_sub_account.py
crypto-pay/libs/cdc-qa-apis/tests/exchange/services/ws/: test_heartbeat.py
crypto-pay/libs/cdc-qa-apis/tests/exchange_derivatives/models/: test_models.py
crypto-pay/libs/cdc-qa-apis/tests/exchange_derivatives/services/: test_basic.py
crypto-pay/libs/cdc-qa-apis/tests/exchange_derivatives/services/rest/: test_public_instruments.py  test_sub_account.py
crypto-pay/libs/cdc-qa-apis/tests/exchange_fe/: conftest.py
crypto-pay/libs/cdc-qa-apis/tests/exchange_fe/services/: test_account.py  test_auth.py  test_basic.py  test_common.py  test_finance.py  test_user.py
crypto-pay/libs/cdc-qa-apis/tests/exchange_fe/services/mock/: account.py  auth.py  common.py  finance.py  user.py
crypto-pay/libs/cdc-qa-apis/tests/exchange_oex/models/: test_models.py
crypto-pay/libs/cdc-qa-apis/tests/exchange_oex/services/rest/: test_instruments.py
crypto-pay/libs/cdc-qa-apis/tests/jumio/services/: test_basic.py
crypto-pay/libs/cdc-qa-apis/tests/rails/models/: test_manual_jumio.py
crypto-pay/libs/cdc-qa-apis/tests/rails/services/: test_basic.py
crypto-pay/libs/cdc-qa-core/: pyproject.toml
crypto-pay/libs/cdc-qa-core/src/cdc/qa/core/: __init__.py  driver.py  enums.py  flags.py  secretsmanager.py
crypto-pay/libs/cdc-qa-helpers/: pyproject.toml
crypto-pay/libs/cdc-qa-helpers/src/cdc/qa/helpers/: __init__.py
crypto-pay/libs/cdc-qa-helpers/tests/database_helper/: test_tsh_exchange_mysql_and_texdb.py  test_tsh_tunnel.py
crypto-pay/libs/cdc-qa-helpers/tests/ops_panel_helper/: test_basic.py
crypto-pay/libs/cdc-qa-helpers/tests/ssh_console_helper/: test_rails.py
crypto-pay/libs/cdc-qa-integrations/: pyproject.toml
crypto-pay/libs/cdc-qa-integrations/src/cdc/qa/integrations/: __init__.py  email.py  otp.py  qase.py  sms.py
crypto-pay/libs/cdc-qa-integrations/tests/email/: mocks.py  test_gmail.py
crypto-pay/libs/cdc-qa-integrations/tests/sms/: mocks.py  test_twilio.py
crypto-pay/libs/cdc-qa-pageobject/: pyproject.toml
crypto-pay/libs/docs/: aws_secrets_manager.md
crypto-pay/pages/: __init__.py  base_page.py  common_page.py  login_page.py
crypto-pay/pages/staging/web/: __init__.py
crypto-pay/test_cases/: common_steps.py  conftest.py  login_steps.py
crypto-pay/test_cases/staging/: test_smoke.py
crypto-pay/test_cases/staging/login/: Login.feature
crypto-pay/test_cases/staging/step_definitions/: __init__.py
crypto-pay/test_resource/data/staging/login/: login_data.yaml
crypto-pay/test_resource/graphql/: __init__.py  account.py  balances.py  crypto_purchase.py  invoices.py  payment.py  payout.py  team.py  terms.py  token.py  user.py
crypto-pay/test_resource/objects/staging/: common_page.yaml  login_page.yaml
(+451 files in other folders)
