[tool.poetry]
name = "automation-project2"
version = "0.1.0"
description = ""
authors = ["LexuanPeng <88361424+LexuanPeng@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
