[tool.poetry]
name = "cdc-qa-apis"
version = "0.1.0"
description = "A collection of packages for integrating APIs from crypto.com products."
authors = ["Max Bai <max.bai@crypto.com>, Lucas Lee <lucas.lee@crypto.com>"]
packages = [
    { include = "cdc", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.8.2"
requests = "^2.25.1"
websocket-client = "^1.0.1"
pycryptodome = "^3.10.1"
pyotp = "^2.6.0"
cdc-qa-core = {path = "../cdc-qa-core", develop = true}
cpf-generator = "^2.1.4"
oauth2client = "^4.1.3"
retry = "^0.9.2"
requests-toolbelt = "^0.10.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^3.8.4"
ipykernel = "^5.5.5"
pytest = "^6.2.4"
requests-mock = "^1.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
