[tool.poetry]
name = "cdc-qa-pageobject"
version = "0.0.1"
description = "Package for implementing Page Object Model (POM), supporting both web and mobile apps."
authors = ["Lucas Lee <lucas.lee@crypto.com>"]
packages = [
    { include = "cdc", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.8"
Appium-Python-Client = "^1.0.2"
cdc-qa-core = {path = "../cdc-qa-core", develop = true}

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^3.8.4"
ipykernel = "^5.3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
